finish pay page, squash bugs, fix design

--- a/app/styles/comp-currentsales.scss
+++ b/app/styles/comp-currentsales.scss
@@ -4,14 +4,15 @@
 .cs-sale-title {
     font-weight: bold;
     font-size: 18px;
+    color: $base-orange;
 }
 
 .cs-sale-close {
     font-size: 12px;
     font-style: italic;
-    padding-bottom: 5px;
+    padding-bottom: 15px;
 }
 
 .cs-sale-copy {
-    padding-bottom: 5px;
+    padding-bottom: 15px;
 }
