--- a/app/styles/pay.scss
+++ b/app/styles/pay.scss
@@ -4,11 +4,12 @@
 
 .pay-confirm-header {
     font-size: 20px;
+    text-align: center;
     color: #f39c12;
     font-weight: bold;
     padding-bottom: 15px;
 }
 
 .pay-confirm-body {
-    
+  padding-bottom: 15px;
 }
